[project]
name = "xdsl-smt"
version = "0.0.0"
dependencies = [
  "z3-solver==4.12.1.0",
  "xdsl==0.22.0",
]

[project.optional-dependencies]
dev = [
  "pyright==1.1.309",
  "lit<16.0.0",
  "pytest<8.0",
  "filecheck==0.0.23",
  "pre-commit==3.3.1",
]

[tool.setuptools]
platforms = ["Linux", "Mac OS-X", "Unix"]
packages = ["xdsl_smt"]
zip-safe = false

[tool.setuptools.package-data]
xdsl_smt = ["py.typed"]

[project.scripts]
xdsl-smt = "xdsl_smt.cli.xdsl_smt:main"
xdsl-tv = "xdsl_smt.cli.xdsl_tv:main"
xdsl-synth = "xdsl_smt.cli.xdsl_synth:main"
xdsl-translate = "xdsl_smt.cli.xdsl_translate:main"
verifier = "xdsl_smt.cli.verifier:main"
verify-pdl = "xdsl_smt.cli.verify_pdl:main"
transfer-verifier = "xdsl_smt.cli.transfer_smt_verifier:main"
cpp-translate = "xdsl_smt.cli.cpp_translate:main"
superoptimize = "xdsl_smt.cli.superoptimize:main"
syn-test = "xdsl_smt.cli.syn_test:main"
synth-transfer = "xdsl_smt.cli.synth_transfer:main"
eval-test= "xdsl_smt.cli.eval_test:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
reportImportCycles = false
reportUnnecessaryIsInstance = false
typeCheckingMode = "strict"
include = ["xdsl_smt"]
ignore = [
  "xdsl_smt/utils/z3_to_dialect.py",
  "xdsl_smt/utils/integer_to_z3.py",
  "xdsl_smt/utils/lower_utils.py",
  "xdsl_smt/passes/calculate_smt.py",
  "xdsl_smt/passes/transfer_lower.py",
  "xdsl_smt/cli/xdsl_translate.py",
  "xdsl_smt/cli/verifier.py",
  "tests",
  "outputs"
]
