[project]
name = "xdsl-smt"
version = "0.0.0"
dependencies = ["z3-solver==4.15.1.0", "xdsl==0.48.3"]

[project.optional-dependencies]
dev = [
  "pyright==1.1.393",
  "lit<16.0.0",
  "pytest<8.0",
  "filecheck==0.0.23",
  "pre-commit==3.3.1",
  "typing-extensions==4.12.2",
]

[tool.setuptools]
platforms = ["Linux", "Mac OS-X", "Unix"]
zip-safe = false

[tool.setuptools.package-data]
xdsl_smt = ["py.typed"]

[project.scripts]
xdsl-smt = "xdsl_smt.cli.xdsl_smt:main"
xdsl-tv = "xdsl_smt.cli.xdsl_tv:main"
xdsl-synth = "xdsl_smt.cli.xdsl_synth:main"
xdsl-translate = "xdsl_smt.cli.xdsl_translate:main"
verify-pdl = "xdsl_smt.cli.verify_pdl:main"
verifier = "xdsl_smt.cli.transfer_function_verifier:main"
cpp-translate = "xdsl_smt.cli.cpp_translate:main"
synthesize-lowering = "xdsl_smt.cli.synthesize_lowering:main"
synthesize-rewrites = "xdsl_smt.cli.synthesize_rewrites:main"
synthesize-symbolic-rewrites = "xdsl_smt.cli.synthesize_symbolic_rewrites:main"
sanity-checker = "xdsl_smt.cli.sanity_checker:main"
superoptimize = "xdsl_smt.cli.superoptimize:main"
xdsl-smt-run = "xdsl_smt.cli.xdsl_smt_run:main"
convert-pdl-to-dialect = "xdsl_smt.cli.convert_pdl_to_dialect:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
enableExperimentalFeatures = true
reportImportCycles = false
reportUnnecessaryIsInstance = false
typeCheckingMode = "strict"
include = ["xdsl_smt", "tests"]
ignore = [
  "xdsl_smt/utils/z3_to_dialect.py",
  "xdsl_smt/utils/integer_to_z3.py",
  "xdsl_smt/utils/lower_utils.py",
  "xdsl_smt/passes/calculate_smt.py",
  "xdsl_smt/passes/transfer_lower.py",
  "xdsl_smt/cli/xdsl_translate.py",
  "xdsl_smt/cli/transfer_smt_verifier.py",
]

[tool.pytest.ini_options]
python_files = ["tests/*test_*.py"]
python_classes = "Test_*"
python_functions = "test_*"
addopts = ["--durations=20", "--maxfail=5", "--import-mode=importlib"]
asyncio_default_fixture_loop_scope = "function"
